# url-shortener

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/api/: dependencies.py
app/api/routers/: auth.py  urls.py  users.py
app/core/: config.py  security.py
app/models/: counter.py  user.py
app/schemas/: url.py  user.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: auth.py  urls.py  users.py
backend/app/core/: config.py  database.py  limiter.py  security.py
backend/app/models/: counter.py  url.py  user.py
backend/app/schemas/: url.py  user.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: GuestRoute.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  NotFound.jsx  RedirectHandler.jsx  Register.jsx  Settings.jsx  TooManyRequests.jsx
nginx/: Dockerfile  nginx.conf.template
